Fixed visual issue of signup page on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,6 +75,12 @@ body {
   grid-template-rows: 25% 70% 5%;
 }
 
+.signup-container {
+  height: 80vh;
+  display: flex;
+  justify-content: space-between;
+}
+
 .roomName-container {
   max-width: 95%;
 }
